@@ -1,6 +1,7 @@
 Upcoming version
 =======================
 + Mirror support: TMM now distibuted on several mirrors for better availability (and error handling for network blockages)
++ added sort option via sort title 
 x renamer: exchange colon with a dash. (even better than removing completely)
 x subtitles: language detection for SUB ones
 
